<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F6F6">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="156dp"
        android:text="@string/login_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="378dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="41dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/login_btn"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/register_btn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="12dp"
        android:text="@string/fast_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <View
        android:id="@+id/view12"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"

        android:background="@android:color/background_dark"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <View
        android:id="@+id/view14"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_dark"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="49dp"
        android:layout_height="41dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="8dp"
        android:background="#F7F5F5"
        android:contentDescription="wxlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/wx" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:text="@string/wx_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="81dp"
        android:layout_height="73dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

</android.support.constraint.ConstraintLayout>