<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WardrobeFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/wardrobe_view2"
            android:layout_width="417dp"
            android:layout_height="51dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wardrobe_textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/wardrobe_title"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/wardrobe_view2"
            app:layout_constraintEnd_toEndOf="@+id/wardrobe_view2"
            app:layout_constraintStart_toStartOf="@+id/wardrobe_view2"
            app:layout_constraintTop_toTopOf="@+id/wardrobe_view2" />

        <ImageButton
            android:id="@+id/wardrobe_imageButton"
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/windowBackground"
            android:src="@drawable/camera"
            app:layout_constraintBottom_toBottomOf="@+id/wardrobe_view2"
            app:layout_constraintStart_toEndOf="@+id/wardrobe_textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/wardrobe_view3"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="#303F9F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/wardrobe_view2"
            app:layout_constraintTop_toBottomOf="@+id/wardrobe_textView5" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/wardrobe_view2"
            app:layout_constraintStart_toStartOf="@+id/wardrobe_view2"
            app:layout_constraintTop_toBottomOf="@+id/wardrobe_view2">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:drawableRight="@drawable/seletor_stock_arrow"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:text="@string/clothes_kind"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:drawableRight="@drawable/seletor_stock_arrow"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:text="@string/clothes_color"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:drawableRight="@drawable/seletor_stock_arrow"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:text="@string/clothes_season"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/wardrobe_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>